# pyjags

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.lab  Dockerfile.test  README.md  RELEASING.md  compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-lab.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  release.yml  test-conda.yml  test.yml
api/: index.html
api/arviz/: index.html
api/chain_utilities/: index.html
api/convergence/: index.html
api/diagnostics/: index.html
api/dic/: index.html
api/io/: index.html
api/model/: index.html
api/modules/: index.html
changelog/: index.html
conda-forge/: meta.yaml
doc/: conf.py  example.py
docs/: index.md
docs/api/: arviz.md  chain_utilities.md  convergence.md  diagnostics.md  dic.md  index.md  io.md  model.md  modules.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: arviz.md  bugs-language.md  divergence.md  parallel.md  persistence.md
docs/notebooks/: Advanced Functionality.ipynb  Eight Schools.ipynb  Getting Started.ipynb  Logistic Regression.ipynb  Trading Cost Estimation.ipynb
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/arviz/: index.html
guide/bugs-language/: index.html
guide/divergence/: index.html
guide/parallel/: index.html
guide/persistence/: index.html
notebooks/: Advanced Functionality.ipynb  Eight Schools.ipynb  Getting Started.ipynb  Logistic Regression.ipynb  New in v2.3.0.ipynb  Trading Cost Estimation.ipynb
notebooks/Advanced Functionality/: Advanced Functionality.ipynb  index.html
notebooks/Eight Schools/: Eight Schools.ipynb  index.html
notebooks/Getting Started/: Getting Started.ipynb  index.html
notebooks/Logistic Regression/: Logistic Regression.ipynb  index.html
notebooks/Trading Cost Estimation/: index.html
pyjags/: __init__.py  arviz.py  chain_utilities.py  dic.py  incremental_sampling.py  io.py  model.py  modules.py
scripts/: install-jags-manylinux.sh  jagslab  run_trading_cost_estimation.py  test-all-pythons
search/: search_index.json
src/pyjags/: __init__.py  _multi_console.py  _rng.py  arviz.py  chain_utilities.py  console.pyi  diagnostics.py  dic.py  incremental_sampling.py  io.py  model.py  modules.py  progressbar.py
test/: __init__.py  conftest.py  test_arviz.py  test_chain_utilities.py  test_diagnostics.py  test_dic.py  test_error_messages.py  test_incremental_sampling.py  test_io.py  test_model.py  test_modules.py  test_new_features.py  test_refactored_helpers.py  test_summary.py  test_version_info.py
