# Copyright (C) 2026 Michael Nowotny
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
    "numpy>=2.0",
    "setuptools-scm>=8",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyjags"
dynamic = ["version"]
description = "Python interface to JAGS for Bayesian analysis via MCMC"
readme = "README.md"
license = {text = "GPL-2.0-only"}
requires-python = ">=3.12"
authors = [
    { name = "Michael Nowotny", email = "nowotnym@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "arviz>=1.0",
    "h5py",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/michaelnowotny/pyjags"
Documentation = "https://github.com/michaelnowotny/pyjags"
Repository = "https://github.com/michaelnowotny/pyjags"
Issues = "https://github.com/michaelnowotny/pyjags/issues"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.packages = ["src/pyjags"]
wheel.install-dir = "."
sdist.include = ["src/pyjags/console.cc"]
sdist.exclude = ["test", "notebooks", "doc", "scripts"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
# Tags have no prefix (e.g. "2.0.0", not "v2.0.0")
tag_regex = "^(?P<version>[vV]?\\d+(?:\\.\\d+)*(?:[._-]?\\w+)*)$"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle)
]

[tool.ruff.lint.isort]
known-first-party = ["pyjags"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "slow: tests that require JAGS model compilation",
]